# cassandra-auth

./: .gitignore  .woodpecker.yaml  CLAUDE.md
infra/modules/auth-worker/: main.tf  outputs.tf  variables.tf
python/src/cassandra_mcp_auth/: __init__.py  auth.py  discovery.py  middleware.py
service/: Dockerfile  model.conf  pyproject.toml  schema.sql
service/src/cassandra_auth_service/: __init__.py  app.py  db.py  main.py  policy.py
service/tests/: test_app.py
src/: acl.ts  types.ts  worker.ts
worker/: worker-configuration.d.ts
worker/src/: index.ts  policy.ts  types.ts
